tests/idris2/reg013/expected
1/1: Building UnboundImplicits (UnboundImplicits.idr)
Error: While processing constructor Foo. Undefined name n. 

UnboundImplicits:6:22--6:23
 2 | import Data.Vect
 3 | 
 4 | %unbound_implicits off
 5 | 
 6 | record Foo (x : Vect n Nat) where
                          ^

Error: Undefined name n. 

UnboundImplicits:9:24--9:25
 5 | 
 6 | record Foo (x : Vect n Nat) where
 7 |   constructor MkFoo
 8 | 
 9 | parameters (Foo : Vect n Nat)
                            ^

Error: While processing constructor Foo. Undefined name n. 

UnboundImplicits:14:25--14:26
 10 |   bar : Nat
 11 |   bar = 0
 12 | 
 13 | 
 14 | interface Foo (a : Vect n Nat) where
                              ^

Error: While processing type of Functor implementation at UnboundImplicits:17:1--17:38. Undefined name n. 

UnboundImplicits:17:30--17:31
 13 | 
 14 | interface Foo (a : Vect n Nat) where
 15 |   baz : Nat
 16 | 
 17 | implementation Functor (Vect n) where
                                   ^

